# ZeroOS

./: .gitignore  CMakeLists.txt  deploy.sh  install.sh  run.sh
boot_loader/uefi/: CMakeLists.txt  boot_loader.c
boot_loader/uefi/include/: efifilelib.h  efiio.h  efilib.h  efilocatedprotocol.h  efimemory.h  efimemorymap.h  efiprotocol.h  efistring.h  efisystab.h  efiutils.h
boot_loader/uefi/include/efi/: efi.h  eficonst.h  efidef.h  efiguid.h  efistruct.h
boot_loader/uefi/lib/: efifilelib.c  efiio.c  efilocatedprotocol.c  efimemory.c  efimemorymap.c  efiprotocol.c  efistring.c  efisystab.c  efiutils.c
kernel/: CMakeLists.txt
kernel/arch/x64/: boot.s  gdt.c  kernel.ld  tty.c  vram.c
kernel/font/: font.c
kernel/include/zero/: font.h  kernel.h  list.h  memorymap.h  physicalmm.h  tty.h  vram.h
kernel/kernel/: kernel.c
kernel/list/: list.c
kernel/mm/: memorymap.c  physicalmm.c
libc/include/: stdio.h  string.h
libc/stdio/: printf.c  sprintf.c  vsprintf.c
libc/string/: sprintf.c  strcat.c  strcmp.c  strcpy.c  strlen.c  strncpy.c  vsprintf.c
